--- a/Comfy/app.css
+++ b/Comfy/app.css
@@ -388,6 +388,10 @@
   overflow: hidden;
 }
 
+::-webkit-scrollbar {
+	display: none !important;
+}
+
 :root .Root__now-playing-bar .main-nowPlayingBar-container {
   position: relative;
   border-top: none;
